# PCM-NO

./: .gitignore  INSTALL_IN_EXISTING_REPO.md  README.md  RELEASE_PREPARATION.md  prepare_data_assets.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: checkpoints.example.json  lc_ablation.yaml  lc_paper.yaml  lc_smoke.yaml  pns_paper.yaml  pns_smoke.yaml  stress.yaml
data/lc/: README.md  SHA256SUMS  download_lc.py  lc_paper_config.json
data/lc/sample/: lc_sample.npz
data/pns/: README.md  SHA256SUMS  download_pns.py  pns_paper_config.json
data/pns/sample/: pns_sample.pt
notebooks/: README.md  lc_quickstart.ipynb  pns_quickstart.ipynb
reproduction/: README.md  run_main.sh  run_smoke.sh
scripts/: aggregate_results.py  benchmark_runtime.py  evaluate.py  generate_data.py  make_figures.py  make_qualitative.py  plot_projection_sensitivity.py  run_ablation.py  run_diagnostics.py  run_stress.py  train.py
src/pcmno/: __init__.py  config.py  diagnostics.py  evaluation.py  factory.py  losses.py  metrics.py  plotting.py  stress.py  training.py  transitions.py  utils.py
src/pcmno/data/: __init__.py  lc.py  pns.py
src/pcmno/models/: __init__.py  clawno.py  fno.py
src/pcmno/operators/: __init__.py  mac.py  periodic.py
tests/: test_config.py  test_mac.py  test_periodic.py
